# OpenCV-LibTorch-Setup

./: CMakeLists.txt  LICENSE  README.md  main.cpp
